style.css
/*======================================
Theme Name: Glades
Theme URI: https://themezee.com/themes/glades/
Description: Glades is a modern Magazine Theme for a local news or any other content focused website. The magazine-styled homepage is built with WordPress core features like Customizer and Widgets, which makes the setup super fast, flexible and easy. The theme comes with a beautiful Featured Content area and responsive design, looking great on every device.
Version: 1.2.2
Author: ThemeZee
Author URI: https://themezee.com
Tags: two-columns, light, blue, custom-background, custom-header, custom-menu, editor-style, blog, news, featured-image-header, featured-images, flexible-header, custom-colors, full-width-template, sticky-post, threaded-comments, translation-ready, theme-options, fluid-layout, responsive-layout, one-column, left-sidebar, right-sidebar, three-columns, black, red, silver, white, green, gray
Text Domain: glades
Domain Path: /languages/
License: GNU General Public License v2.0
License URI: http://www.gnu.org/licenses/gpl-2.0.html
======================================*/

/* CSS Reset | http://meyerweb.com/eric/tools/css/reset/ | v2.0
-------------------------------------------------------------- */
html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li,
fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary, time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* General Styles
-------------------------------------------------------------- */
html {
	font-size: 100.01%;
}
body {
	font-family: 'PT Sans', Arial, Verdana;
	font-size: 1.05em;
	border: 0;
	color: #111;
	background-color: #e5e5e5;
}

/* Links */
a, a:link, a:visited{
	color: #1188cc;
	text-decoration: none;
}
a:hover, a:active {
	text-decoration: underline;
}

/* Form Elements */
input, textarea {
	padding: 0.7em;
	background: #fff;
	border: 2px solid #ddd;
	font-size: 1.0em;
	color: #222;
	font-family: 'PT Sans', Arial, Verdana;
}
input[type="submit"] {
	display: inline-block;
	padding: 0.5em 1em;
	text-decoration: none;
	color: #fff;
	background: #1188cc;
	font-family: 'Contrail One', Tahoma, Arial;
	text-transform: uppercase;
	border: none;
}
input[type="submit"]:hover {
	background: #151515;
	cursor: pointer;
}

/* Clearing Floats */
.clearfix:before, .clearfix:after {
	content: " ";
	display: table;
}
.clearfix:after {
	clear: both;
}
.clearfix {
    *zoom: 1; /* For IE 6/7 only */
}

/* Make Form Elements responsive */
input, textarea, select {
	max-width: 100%;
}

/* Text meant only for screen readers. */
.screen-reader-text {
	clip: rect(1px, 1px, 1px, 1px);
	position: absolute !important;
	height: 1px;
	width: 1px;
	overflow: hidden;
}

.screen-reader-text:focus {
	background-color: #f1f1f1;
	border-radius: 3px;
	box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
	clip: auto !important;
	color: #21759b;
	display: block;
	font-size: 14px;
	font-size: 0.875rem;
	font-weight: bold;
	height: auto;
	left: 5px;
	line-height: normal;
	padding: 15px 23px 14px;
	text-decoration: none;
	top: 5px;
	width: auto;
	z-index: 100000; /* Above WP toolbar. */
}

/* Basic Structure
-------------------------------------------------------------- */
.container {
	max-width: 1260px;
	width: 94%;
	margin: 0 auto;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}
#wrapper {
	background: #fff;
}
#wrap {
	clear: both;
	padding: 2em 0;
}
#content {
	float: left;
	width: 74%;
	padding-right: 2em;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}
#sidebar {
	float: right;
	width: 26%;
}

/* Top Header
-------------------------------------------------------------- */
#topheader-wrap {
	background: #151515;
}
#topheader-wrap #navi-social-icons {
	float: right;
}
#topheader {
	position: relative;
}
.topnav-toggle, .topnav-icon, #social-menu-toggle, #social-menu-icon {
	display: none;
}
.top-navigation-menu {
	display: inline;
	list-style-type: none;
	list-style-position: outside;
}
.top-navigation-menu li {
	float: left;
}
.top-navigation-menu a {
	display: block;
	font-family: 'PT Sans', Arial, Verdana;
	font-size: 0.8em;
	padding: 1em;
	text-decoration: none;
}
.top-navigation-menu a:link, .top-navigation-menu a:visited {
	color: #fff;
	text-decoration: none;
}
.top-navigation-menu a:hover {
	background: rgba(0,0,0,0.075);
}
.top-navigation-menu ul {
	position: absolute;
	display: none;
	z-index: 99;
	color: #fff;
	background: #151515;
}
.top-navigation-menu ul li{
	float: none;
	position: relative;
}
.top-navigation-menu ul a {
	min-width: 250px;
	min-width: 16rem;
	padding: 1em 1.2em;
	font-size: 0.75em;
	text-transform: none;
	background: rgba(0,0,0,0.075);
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}
.top-navigation-menu ul a:link, .top-navigation-menu ul a:visited {
	color: #fff;
	text-decoration: none;
}
.top-navigation-menu ul a:hover {
	text-decoration: underline;
}
.top-navigation-menu li ul ul {
	top: 0;
	left: 100%;
	border-left: 1px solid rgba(255,255,255,0.2);
}
/* ... */

